--- a/src/components/Experiences.css
+++ b/src/components/Experiences.css
@@ -3,12 +3,6 @@ padding: 25px 70px;
 background: var(--experience-bg-color);
 }
 
-/* petit ecran*/
-@media screen and (max-width:768px) {
-  .experiences {
-    padding: 25px 15px;
-  }
-}
 
 
 .experiences  h3 {
@@ -16,6 +10,19 @@ background: var(--experience-bg-color);
   padding : 15px 25px 8px;
   font-size: 32px;
 }
+
+/* petit ecran*/
+@media screen and (max-width:768px) {
+  .experiences {
+    padding: 25px 15px;
+  }
+  .experiences  h3 {
+    margin-bottom: 30px;
+    padding : 15px 8px 8px;
+    font-size: 24px;
+  }
+}
+
 
 .experience {
   margin-bottom:25px;
