--- a/src/components/Profil.css
+++ b/src/components/Profil.css
@@ -10,7 +10,6 @@
     display:flex;
     align-items:center;
     justify-content:space-between;
-    min-width: 350px;
     display : flex;
     flex-wrap: wrap;
     width: 100%;
@@ -20,6 +19,7 @@
   color: #4c4c59;
   margin: 0 25px ;
 }
+
 .user__avatar {
   border-radius: 5%;
   width: 100px;
@@ -38,6 +38,18 @@
   padding: var(--spacing-3) 0 var(--spacing-1) 0;
   margin: 0 25px ;
 }
+
+/* petit ecran*/
+@media screen and (max-width:768px) {
+  .user-infos {
+    padding: var(--spacing-1) 0 var(--spacing-1) 0;
+    margin: 0 0 0 15px ;
+  }
+  .profil-title {
+    margin: 0 0 0 15px ;
+  }
+}
+
 .user-info {
   display: flex;
   margin-bottom: var(--spacing-1);
