--- a/src/components/Experiences.css
+++ b/src/components/Experiences.css
@@ -47,3 +47,30 @@ background: var(--experience-bg-color);
   font-size: 18px;
   list-style-type: none;
 }
+
+
+ /* pour pdf  */
+
+ .cv-pdf .experiences {
+  padding: 12px 32px;
+  background: var(--experience-bg-color);
+  }
+  
+  
+  
+  .cv-pdf .experiences  h3 {
+    margin-bottom: 20px;
+    padding : 15px 15px 8px;
+    font-size: 18px;
+  }
+
+  .cv-pdf .experience ul {
+    padding-left: 22px;
+    font-size: 14px;
+  }
+
+  .cv-pdf .experiences {
+    background: var(--experience-pdf-bg-color);
+    }
+    
+  
